--- a/client/src/main/resources/com/seasidechachacha/client/view/ViewListUser.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/ViewListUser.fxml
@@ -17,30 +17,35 @@
 <!--<?import javafx.scene.control.TableView?>-->
 <!--<?import javafx.scene.layout.HBox?>-->
 
-<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.ViewListUserController">
+<VBox prefHeight="600.0" prefWidth="800.0" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.ViewListUserController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
     <children>
-        <Label style="-fx-font-weight: bold;" text="Danh sách người liên quan Covid19" textOverrun="CLIP">
-            <font>
-                <Font size="20.0" />
-            </font>
+        <Label styleClass="main-label" alignment="CENTER" maxWidth="1.7976931348623157E308" text="Danh sách người liên quan Covid19" textOverrun="CLIP">
         </Label>
         <HBox>
             <AnchorPane prefHeight="24.0" prefWidth="500.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                 <children>
                     <TextField promptText="Nhập từ khoá để tìm kiếm" styleClass="search-bar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                    <Button styleClass="btn, btn-primary" text="Tìm kiếm" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                    <Button style="-fx-background-color: #0098f1;" text="Tìm kiếm" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <font>
+                            <Font name="System Bold" size="13.0" />
+                        </font>
+                    </Button>
                 </children>
             </AnchorPane>
             
             <Pane HBox.hgrow="ALWAYS" />
-            <Button styleClass="btn, btn-success" text="Thêm mới người dùng" />    
+            <Button style="-fx-background-color: #0098f1;" text="Thêm mới người dùng" textFill="WHITE">
+                <font>
+                    <Font name="System Bold" size="13.0" />
+                </font>
+            </Button>    
         </HBox> 
         <TableView fx:id="table" prefHeight="373.0" prefWidth="760.0">
             <columns>
-            <TableColumn fx:id="fullNameCol1" prefWidth="150.4000244140625" text="STT" />
+                <TableColumn fx:id="fullNameCol1" prefWidth="150.4000244140625" text="STT" />
                 <TableColumn fx:id="fullNameCol" prefWidth="150.4000244140625" text="Họ tên" />
                 <TableColumn fx:id="birthYearCol" minWidth="0.0" prefWidth="188.0" text="Năm sinh" />
                 <TableColumn fx:id="addressCol" minWidth="0.0" prefWidth="188.0" text="Địa chỉ" />
