--- a/client/src/main/resources/com/seasidechachacha/client/view/ViewPersonalInfo.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/ViewPersonalInfo.fxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,17 +12,12 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.ViewPersonalInfoController">
+
+<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.ViewPersonalInfoController">
     <children>
-        <Label alignment="TOP_CENTER" prefHeight="30.0" prefWidth="803.0" text="Thông tin cá nhân" textFill="#006abc">
-            <font>
-                <Font name="System Bold" size="20.0" />
-            </font>
+        <Label alignment="TOP_CENTER" prefHeight="30.0" prefWidth="803.0" styleClass="main-label" text="Thông tin cá nhân">
         </Label>
-        <Label text="Thông tin cơ bản" textFill="#006abc">
-            <font>
-                <Font name="System Bold" size="16.0" />
-            </font>
+        <Label styleClass="sub-label" text="Thông tin cơ bản">
             <VBox.margin>
                 <Insets left="50.0" />
             </VBox.margin>
@@ -35,7 +31,7 @@
                                 <Font name="System Bold" size="14.0" />
                             </font>
                         </Label>
-                        <Label prefWidth="193.0" text="Nguyễn Văn A">
+                        <Label fx:id="labelFullName" text="">
                             <font>
                                 <Font size="14.0" />
                             </font>
@@ -52,7 +48,7 @@
                                 <Font name="System Bold" size="14.0" />
                             </font>
                         </Label>
-                        <Label text="123456789">
+                        <Label fx:id="labelIdentityCard" text="">
                             <font>
                                 <Font size="14.0" />
                             </font>
@@ -66,7 +62,7 @@
                                 <Font name="System Bold" size="14.0" />
                             </font>
                         </Label>
-                        <Label prefHeight="20.0" prefWidth="34.0" text="1950">
+                        <Label fx:id="labelBirthYear" text="">
                             <font>
                                 <Font size="14.0" />
                             </font>
@@ -80,7 +76,7 @@
                                 <Font name="System Bold" size="14.0" />
                             </font>
                         </Label>
-                        <Label text="abcxyzdefeejfiefj">
+                        <Label fx:id="labelAddress" text="">
                             <font>
                                 <Font size="14.0" />
                             </font>
@@ -94,7 +90,7 @@
                                 <Font name="System Bold" size="14.0" />
                             </font>
                         </Label>
-                        <Label prefHeight="20.0" prefWidth="20.0" text="F2">
+                        <Label fx:id="labelStatus" text="">
                             <font>
                                 <Font size="14.0" />
                             </font>
@@ -108,7 +104,7 @@
                                 <Font name="System Bold" size="14.0" />
                             </font>
                         </Label>
-                        <Label text="abcxyz">
+                        <Label fx:id="labelTreatmentPlace" text="">
                             <font>
                                 <Font size="14.0" />
                             </font>
@@ -119,17 +115,11 @@
             <VBox.margin>
                 <Insets left="50.0" right="50.0" />
             </VBox.margin>
-            <cursor>
-                <Cursor fx:constant="CLOSED_HAND" />
-            </cursor>
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
         </AnchorPane>
-        <Label text="Danh sách người liên đới" textFill="#006abc">
-            <font>
-                <Font name="System Bold" size="16.0" />
-            </font>
+        <Label styleClass="sub-label" text="Danh sách người liên đới">
             <VBox.margin>
                 <Insets left="50.0" top="20.0" />
             </VBox.margin>
@@ -149,6 +139,48 @@
                 <Insets left="50.0" right="50.0" />
             </VBox.margin>
         </TableView>
+      <Label styleClass="sub-label" text="Lịch sử quá trình thay đổi trạng thái">
+         <VBox.margin>
+            <Insets left="50.0" top="20.0" />
+         </VBox.margin>
+      </Label>
+      <TableView fx:id="table1" prefHeight="200.0" prefWidth="646.0">
+         <columns>
+            <TableColumn fx:id="dateCol" prefWidth="75.0" text="Ngày" />
+            <TableColumn fx:id="currentStatusCol" prefWidth="75.0" text="Trạng thái" />
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+         <VBox.margin>
+            <Insets left="50.0" right="50.0" />
+         </VBox.margin>
+      </TableView>
+      <Label styleClass="sub-label" text="Lịch sử quá trình thay đổi nơi điều trị">
+         <VBox.margin>
+            <Insets left="50.0" top="20.0" />
+         </VBox.margin>
+      </Label>
+      <TableView fx:id="table11" prefHeight="200.0" prefWidth="646.0">
+         <columns>
+            <TableColumn fx:id="dateCol1" prefWidth="75.0" text="Ngày" />
+            <TableColumn fx:id="currentStatusCol1" prefWidth="75.0" text="Nơi điều trị" />
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+         <VBox.margin>
+            <Insets left="50.0" right="50.0" />
+         </VBox.margin>
+      </TableView>
+      <Button fx:id="btnBack" mnemonicParsing="false" onAction="#goBack" text="Quay lại">
+         <VBox.margin>
+            <Insets left="50.0" top="20.0" />
+         </VBox.margin>
+         <graphic>
+            <FontAwesomeIconView fill="WHITE" glyphName="ARROW_LEFT" />
+         </graphic>
+      </Button>
     </children>
     <stylesheets>
         <URL value="@../css/style.css" />
