--- a/client/src/main/resources/com/seasidechachacha/client/view/Firstlogin.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/Firstlogin.fxml
@@ -14,7 +14,7 @@
          <children>
             <ImageView fx:id="logo" fitHeight="172.0" fitWidth="471.0" layoutX="273.0" layoutY="177.0" pickOnBounds="true" preserveRatio="true" VBox.vgrow="ALWAYS">
                <image>
-                  <Image url="@logo1.png" />
+                  <Image url="@../img/logo1.png" />
                </image>
             </ImageView>
             <Text fill="#20377c" layoutX="384.0" layoutY="347.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Đây là lần đầu hệ thống được khởi tạo" textAlignment="CENTER" VBox.vgrow="ALWAYS">
