render UI based on data from db and update db script

--- a/client/src/main/resources/com/seasidechachacha/client/view/ViewListUser.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/ViewListUser.fxml
@@ -13,10 +13,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<!--<?import javafx.scene.control.TableColumn?>-->
-<!--<?import javafx.scene.control.TableView?>-->
-<!--<?import javafx.scene.layout.HBox?>-->
-
 <VBox prefHeight="600.0" prefWidth="800.0" spacing="20.0" xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.ViewListUserController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -45,11 +41,11 @@
         </HBox> 
         <TableView fx:id="table" prefHeight="373.0" prefWidth="760.0">
             <columns>
-                <TableColumn fx:id="fullNameCol1" prefWidth="150.4000244140625" text="STT" />
+                <TableColumn fx:id="numberCol" prefWidth="150.4000244140625" text="STT" />
                 <TableColumn fx:id="fullNameCol" prefWidth="150.4000244140625" text="Họ tên" />
                 <TableColumn fx:id="birthYearCol" minWidth="0.0" prefWidth="188.0" text="Năm sinh" />
                 <TableColumn fx:id="addressCol" minWidth="0.0" prefWidth="188.0" text="Địa chỉ" />
-                <TableColumn fx:id="statusCol" minWidth="0.0" prefWidth="188.0" text="Trạng thái" />
+                <!--<TableColumn fx:id="statusCol" minWidth="0.0" prefWidth="188.0" text="Trạng thái" />-->
                 <TableColumn fx:id="actionCol" prefWidth="150.4000244140625" text="#" />
             </columns>
             <columnResizePolicy>
