--- a/client/src/main/resources/com/seasidechachacha/client/view/Firstlogin.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/Firstlogin.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="vbox" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.FirstLoginController">
+<VBox fx:id="vbox" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.Login.FirstLoginController">
    <children>
       <AnchorPane fx:id="firstlogin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1050.0" VBox.vgrow="ALWAYS">
          <children>
