Revert "restructure controller"
This reverts commit a344caed93504693a7e7e3c262d5856d3245edf0.

--- a/client/src/main/resources/com/seasidechachacha/client/view/CreateUserPassword.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/CreateUserPassword.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox style="-fx-background-color: white; -fx-border-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.Login.CreateUserPasswordController">
+<VBox style="-fx-background-color: white; -fx-border-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.CreateUserPasswordController">
    <children>
       <AnchorPane id="AnchorPane">
          <children>
