--- a/client/src/main/resources/com/seasidechachacha/client/view/AdminScreen.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/AdminScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="1050.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.MainController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="1050.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.AdminScreenController">
    <children>
       <AnchorPane layoutX="250.0" prefHeight="430.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <effect>
@@ -32,14 +32,11 @@
                   <DropShadow />
                </effect>
             </AnchorPane>
-            <JFXButton fx:id="btn_all" graphicTextGap="35.0" layoutY="71.0" onAction="#handleButtonAction" prefHeight="43.0" prefWidth="250.0" ripplerFill="#1f86da" text="Quản lý người dùng" />
-            <JFXButton fx:id="btn_core" graphicTextGap="35.0" layoutY="114.0" onAction="#handleButtonAction" prefHeight="43.0" prefWidth="250.0" text="Quản lý nhu yếu phẩm" />
-            <JFXButton fx:id="btn_xeom" graphicTextGap="35.0" layoutY="157.0" onAction="#handleButtonAction" prefHeight="43.0" prefWidth="250.0" text="Thống kê thông tin" />
-            <JFXButton fx:id="btn_atom" graphicTextGap="35.0" layoutX="-1.0" layoutY="200.0" onAction="#handleButtonAction" prefHeight="43.0" prefWidth="250.0" text="Khác" />
-            <FontAwesomeIconView fill="#3c3b3b" glyphName="ARCHIVE" layoutX="13.0" layoutY="139.0" size="15" />
+            <JFXButton fx:id="btn_all" graphicTextGap="35.0" layoutY="71.0" onAction="#handleButtonAction" prefHeight="43.0" prefWidth="250.0" ripplerFill="#1f86da" text="       Quản lý người quản lý" />
+            <JFXButton fx:id="btn_core" graphicTextGap="35.0" layoutY="114.0" onAction="#handleButtonAction" prefHeight="43.0" prefWidth="250.0" text="         Quản lý địa điểm điều trị/cách ly" />
+            
+            <FontAwesomeIconView fill="#3c3b3b" glyphName="HOSPITAL_ALT" layoutX="14.0" layoutY="140.0" size="15" />
             <FontAwesomeIconView fill="#3c3b3b" glyphName="USER" layoutX="15.0" layoutY="97.0" size="15" />
-            <FontAwesomeIconView fill="#3c3b3b" glyphName="INFO" layoutX="18.0" layoutY="183.0" size="15" />
-            <FontAwesomeIconView fill="#3c3b3b" glyphName="SHEKEL" layoutX="15.0" layoutY="225.0" size="15" text="" />
          </children>
          <effect>
             <DropShadow />
