--- a/client/src/main/resources/com/seasidechachacha/client/view/BuyPackage.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/BuyPackage.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <VBox stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.BuyPackageController">
    <children>
       <AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="800.0">
@@ -23,8 +22,6 @@
                   <TableColumn fx:id="limitCol" maxWidth="2500.0" minWidth="0.0" prefWidth="179.199951171875" text="Mức giới hạn" />
                   <TableColumn fx:id="dayCol" maxWidth="3000.0" minWidth="0.0" prefWidth="64.800048828125" text="Thời gian giới hạn" />
                   <TableColumn fx:id="priceCol" maxWidth="2500.0" minWidth="0.0" prefWidth="188.0" text="Đơn giá" />
-                  <TableColumn fx:id="editCol" maxWidth="1500.0" prefWidth="100.0" text="#1" />
-                  <TableColumn fx:id="deleteCol" maxWidth="1500.0" prefWidth="100.0" text="#2" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -50,7 +47,7 @@
                </font>
             </Label>
             <Label fx:id="totalCost" layoutX="592.0" layoutY="642.0" text="...." />
-            <Button fx:id="acceptButton" layoutX="348.0" layoutY="691.0" mnemonicParsing="false" onAction="#handleButton" text="Xác nhận mua" />
+            <Button fx:id="acceptButton" layoutX="364.0" layoutY="693.0" mnemonicParsing="false" onAction="#handleButton" text="Đặt hàng" />
          </children>
       </AnchorPane>
    </children>
