--- a/client/src/main/resources/com/seasidechachacha/client/view/ViewListPackage.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/ViewListPackage.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -12,6 +14,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.control.Pagination?>
 
 <VBox prefHeight="600.0" prefWidth="800.0" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.ViewListPackageController">
     <padding>
@@ -21,38 +24,58 @@
         <Label alignment="CENTER" maxWidth="1.7976931348623157E308" styleClass="main-label" text="Danh sách nhu yếu phẩm" textOverrun="CLIP">
         </Label>
         <HBox>
-            <AnchorPane prefHeight="24.0" prefWidth="500.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <AnchorPane prefHeight="24.0" prefWidth="400.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                 <children>
-                    <TextField promptText="Nhập từ khoá để tìm kiếm" styleClass="search-bar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                    <Button style="-fx-background-color: #0098f1;" text="Tìm kiếm" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <TextField fx:id="tfSearch" prefHeight="27.0" prefWidth="438.0" promptText="Nhập từ khoá để tìm kiếm" styleClass="search-bar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                    <Button fx:id="btnSearch" style="-fx-background-color: #0098f1;" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <font>
+                            <Font name="System Bold" size="13.0" />
+                        </font>
+                        <graphic>
+                            <FontAwesomeIconView fill="WHITE" glyphName="SEARCH" />
+                        </graphic>
+                    </Button>
+                </children>
+            </AnchorPane>
+            
+            <Pane HBox.hgrow="ALWAYS">
+                <children>
+                    <ComboBox fx:id="cbSort" layoutX="57.0" layoutY="1.0" prefWidth="150.0" style="-fx-background-color: transparent; -fx-border-color: #006abc;" />
+                    <Button fx:id="btnSort" layoutX="224.0" style="-fx-background-color: #0098f1;" text="Sắp xếp" textFill="WHITE">
                         <font>
                             <Font name="System Bold" size="13.0" />
                         </font>
                     </Button>
                 </children>
-            </AnchorPane>
-            
-            <Pane HBox.hgrow="ALWAYS" />
-            <Button fx:id="btnAdd" style="-fx-background-color: #0098f1;" text="Thêm mới nhu yếu phẩm" textFill="WHITE">
+            </Pane>
+            <Button fx:id="btnAdd" style="-fx-background-color: #0098f1;" textFill="WHITE">
                 <font>
                     <Font name="System Bold" size="13.0" />
                 </font>
+                <graphic>
+                    <FontAwesomeIconView fill="WHITE" glyphName="PLUS" />
+                </graphic>
             </Button>    
         </HBox> 
-        <TableView fx:id="table" prefHeight="373.0" prefWidth="760.0">
-            <columns>
-                <TableColumn fx:id="numberCol" maxWidth="1000.0" prefWidth="106.4000244140625" text="STT" />
-                <TableColumn fx:id="nameCol" maxWidth="6000.0" prefWidth="89.60003662109375" text="Tên gói" />
-                <TableColumn fx:id="limitCol" maxWidth="2500.0" minWidth="0.0" prefWidth="179.199951171875" text="Mức giới hạn" />
-                <TableColumn fx:id="dayCol" maxWidth="3000.0" minWidth="0.0" prefWidth="64.800048828125" text="Thời gian giới hạn" />
-                <TableColumn fx:id="priceCol" maxWidth="2500.0" minWidth="0.0" prefWidth="188.0" text="Đơn giá" />
-                <TableColumn fx:id="editCol" maxWidth="1500.0" prefWidth="100.0" text="#1" />
-            <TableColumn fx:id="deleteCol" maxWidth="1500.0" prefWidth="100.0" text="#2" />
-            </columns>
-            <columnResizePolicy>
-                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-            </columnResizePolicy>
-        </TableView>
+        <Pagination fx:id="pagination">
+<!--            <fx:define>
+                <TableView fx:id="table" prefHeight="373.0" prefWidth="760.0">
+                    <columns>
+                        <TableColumn fx:id="numberCol" prefWidth="150.4000244140625" text="ID" />
+                        <TableColumn fx:id="fullNameCol" prefWidth="150.4000244140625" text="Họ tên" />
+                        <TableColumn fx:id="birthYearCol" minWidth="0.0" prefWidth="188.0" text="Năm sinh" />
+                        <TableColumn fx:id="addressCol" minWidth="0.0" prefWidth="188.0" text="Địa chỉ" />
+                        <TableColumn fx:id="statusCol" minWidth="0.0" prefWidth="188.0" text="Trạng thái" />
+                        <TableColumn fx:id="actionCol" prefWidth="150.4000244140625" text="#" />
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                </TableView>
+            </fx:define>-->
+            
+        </Pagination>
+       
     </children>
     <stylesheets>
         <URL value="@../css/style.css" />
