--- a/client/src/main/resources/com/seasidechachacha/client/view/AddNewPackage.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/AddNewPackage.fxml
@@ -4,7 +4,6 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -46,13 +45,13 @@
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <ComboBox fx:id="cbCurrentStatus" layoutX="350.0" layoutY="101.0" prefWidth="150.0" style="-fx-background-color: transparent; -fx-border-color: #006abc;" />
-            <Button fx:id="btnAddNewPerson" layoutX="310.0" layoutY="166.0" mnemonicParsing="false" text="Thêm mới" />
+            <Button fx:id="btnAdd" layoutX="310.0" layoutY="166.0" mnemonicParsing="false" text="Thêm mới" />
             <Button fx:id="btnBack" layoutY="166.0" mnemonicParsing="false" onAction="#goBack" text="Quay lại">
                <graphic>
                   <FontAwesomeIconView fill="WHITE" glyphName="ARROW_LEFT" />
                </graphic>
             </Button>
+            <TextField fx:id="tfDayCooldown" layoutX="351.0" layoutY="100.0" prefHeight="26.0" prefWidth="330.0" promptText="Nhập thời gian giới hạn" />
             </children>
         </AnchorPane>
     </children>
