--- a/client/src/main/resources/com/seasidechachacha/client/view/ViewListTreatmentPlace.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/ViewListTreatmentPlace.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.control.Pagination?>
 
 <VBox prefHeight="600.0" prefWidth="800.0" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.ViewListTreatmentPlaceController">
     <padding>
@@ -24,19 +25,24 @@
                 </font>
             </Button>    
         </HBox> 
-        <TableView fx:id="table" prefHeight="373.0" prefWidth="760.0">
-            <columns>
-                <TableColumn fx:id="numberCol" maxWidth="1000.0" prefWidth="69.60000610351562" text="STT" />
-                <TableColumn fx:id="nameCol" maxWidth="6000.0" prefWidth="191.19998168945312" text="Tên địa điểm" />
-                <TableColumn fx:id="capacityCol" maxWidth="2500.0" minWidth="0.0" prefWidth="188.0" text="Sức chứa" />
-                <TableColumn fx:id="receptionCol" minWidth="0.0" prefWidth="188.0" text="Số lượng tiếp nhận hiện tại" />
-                <TableColumn fx:id="editCol" maxWidth="1500.0" prefWidth="150.4000244140625" text="#1" />
-                <TableColumn fx:id="deleteCol" maxWidth="1500.0" prefWidth="150.4000244140625" text="#2" />
-            </columns>
-            <columnResizePolicy>
-                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-            </columnResizePolicy>
-        </TableView>
+        <Pagination fx:id="pagination">
+<!--            <fx:define>
+                <TableView fx:id="table" prefHeight="373.0" prefWidth="760.0">
+                    <columns>
+                        <TableColumn fx:id="numberCol" prefWidth="150.4000244140625" text="ID" />
+                        <TableColumn fx:id="fullNameCol" prefWidth="150.4000244140625" text="Họ tên" />
+                        <TableColumn fx:id="birthYearCol" minWidth="0.0" prefWidth="188.0" text="Năm sinh" />
+                        <TableColumn fx:id="addressCol" minWidth="0.0" prefWidth="188.0" text="Địa chỉ" />
+                        <TableColumn fx:id="statusCol" minWidth="0.0" prefWidth="188.0" text="Trạng thái" />
+                        <TableColumn fx:id="actionCol" prefWidth="150.4000244140625" text="#" />
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                </TableView>
+            </fx:define>-->
+            
+        </Pagination>
     </children>
     <stylesheets>
         <URL value="@../css/style.css" />
