--- a/client/src/main/resources/com/seasidechachacha/client/view/ViewTreatmentPlaceInfo.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/ViewTreatmentPlaceInfo.fxml
@@ -84,7 +84,7 @@
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
         </AnchorPane>
-      <Button fx:id="btnBack" mnemonicParsing="false" text="Quay lại">
+      <Button fx:id="btnBack" mnemonicParsing="false" onAction="#goBack" text="Quay lại">
          <VBox.margin>
             <Insets left="50.0" top="20.0" />
          </VBox.margin>
