--- a/client/src/main/resources/com/seasidechachacha/client/view/ViewPersonalInfo.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/ViewPersonalInfo.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.ViewPersonalInfoController">
+<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.ViewPersonalInfoController">
     <children>
         <Label alignment="TOP_CENTER" prefHeight="30.0" prefWidth="803.0" styleClass="main-label" text="Thông tin cá nhân">
         </Label>
@@ -82,14 +82,14 @@
                         </Label>
                     </children>
                 </HBox>
-                <HBox layoutY="148.0" prefWidth="398.0" spacing="30.0" AnchorPane.topAnchor="148.0">
+                <HBox layoutY="148.0" prefWidth="500.0" spacing="30.0" AnchorPane.topAnchor="148.0">
                     <children>
-                        <Label alignment="TOP_RIGHT" prefHeight="20.0" prefWidth="216.0" text="Trạng thái hiện tại" textFill="#006abc">
+                        <Label alignment="TOP_RIGHT" prefHeight="20.0" prefWidth="224.0" text="Trạng thái hiện tại" textFill="#006abc">
                             <font>
                                 <Font name="System Bold" size="14.0" />
                             </font>
                         </Label>
-                        <Label fx:id="labelStatus" prefHeight="20.0" prefWidth="87.0" text="">
+                        <Label fx:id="labelStatus" prefHeight="20.0" prefWidth="200.0" text="">
                             <font>
                                 <Font size="14.0" />
                             </font>
@@ -104,21 +104,21 @@
                   </Button>
                     </children>
                 </HBox>
-                <HBox layoutY="179.0" prefWidth="398.0" spacing="30.0" AnchorPane.topAnchor="179.0">
+                <HBox layoutY="179.0" prefWidth="500.0" spacing="30.0" AnchorPane.topAnchor="179.0">
                     <children>
-                        <Label alignment="TOP_RIGHT" prefHeight="20.0" prefWidth="215.0" text="Nơi đang điều trị/cách ly" textFill="#006abc">
+                        <Label alignment="TOP_RIGHT" prefHeight="20.0" prefWidth="221.0" text="Nơi đang điều trị/cách ly" textFill="#006abc">
                             <font>
                                 <Font name="System Bold" size="14.0" />
                             </font>
                         </Label>
-                        <Label fx:id="labelTreatmentPlace" prefHeight="20.0" prefWidth="88.0" text="">
+                        <Label fx:id="labelTreatmentPlace" prefHeight="20.0" prefWidth="200.0" text="">
                             <font>
                                 <Font size="14.0" />
                             </font>
                         </Label>
                   <Button fx:id="btnChangePlace" mnemonicParsing="false">
                      <graphic>
-                        <FontAwesomeIconView  fill="WHITE" glyphName="EDIT" />
+                        <FontAwesomeIconView fill="WHITE" glyphName="EDIT" />
                      </graphic>
                   </Button>
                     </children>
@@ -136,9 +136,9 @@
                 <Insets left="50.0" top="20.0" />
             </VBox.margin>
         </Label>
-        <TableView fx:id="table" prefHeight="200.0" prefWidth="646.0">
+        <TableView fx:id="tableRelated" prefHeight="200.0" prefWidth="646.0">
             <columns>
-                <TableColumn fx:id="numberCol" prefWidth="75.0" text="STT" />
+                <TableColumn fx:id="numberCol" prefWidth="75.0" text="ID" />
                 <TableColumn fx:id="fullNameCol" prefWidth="75.0" text="Họ tên" />
                 <TableColumn fx:id="addressCol" prefWidth="75.0" text="Địa chỉ" />
                 <TableColumn fx:id="birthYearCol" prefWidth="75.0" text="Năm sinh" />
@@ -156,9 +156,9 @@
             <Insets left="50.0" top="20.0" />
          </VBox.margin>
       </Label>
-      <TableView fx:id="table1" prefHeight="200.0" prefWidth="646.0">
+      <TableView fx:id="tableStatus" prefHeight="200.0" prefWidth="646.0">
          <columns>
-            <TableColumn fx:id="dateCol" prefWidth="75.0" text="Ngày" />
+            <TableColumn fx:id="dateStatusCol" prefWidth="75.0" text="Ngày" />
             <TableColumn fx:id="currentStatusCol" prefWidth="75.0" text="Trạng thái" />
          </columns>
          <columnResizePolicy>
@@ -173,10 +173,10 @@
             <Insets left="50.0" top="20.0" />
          </VBox.margin>
       </Label>
-      <TableView fx:id="table11" prefHeight="200.0" prefWidth="646.0">
+      <TableView fx:id="tablePlace" prefHeight="200.0" prefWidth="646.0">
          <columns>
-            <TableColumn fx:id="dateCol1" prefWidth="75.0" text="Ngày" />
-            <TableColumn fx:id="currentStatusCol1" prefWidth="75.0" text="Nơi điều trị" />
+            <TableColumn fx:id="datePlaceCol" prefWidth="75.0" text="Ngày" />
+            <TableColumn fx:id="placeCol" prefWidth="75.0" text="Nơi điều trị" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
