--- a/client/src/main/resources/com/seasidechachacha/client/view/ViewTreatmentPlaceInfo.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/ViewTreatmentPlaceInfo.fxml
@@ -23,7 +23,7 @@
                                 <Font name="System Bold" size="14.0" />
                             </font>
                         </Label>
-                        <Label fx:id="labelName" prefWidth="78.0" text="">
+                        <Label fx:id="labelName" prefHeight="20.0" prefWidth="226.0" text="">
                             <font>
                                 <Font size="14.0" />
                             </font>
