--- a/client/src/main/resources/com/seasidechachacha/client/view/StatisticNumberPackage.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/StatisticNumberPackage.fxml
@@ -14,7 +14,7 @@
       <AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="800.0">
          <children>
             <Label layoutX="323.0" layoutY="27.0" styleClass="main-label" text="Thống kê chi tiết" />
-            <Button fx:id="nextButton" layoutX="635.0" layoutY="129.0" mnemonicParsing="false" onAction="#handleButton" text="Tiếp tục" />
+            <Button fx:id="nextButton" layoutX="635.0" layoutY="129.0" mnemonicParsing="false" text="Tiếp tục" />
             <Label layoutX="188.0" layoutY="130.0" styleClass="sub-label" text="Thống kê:" />
             <ChoiceBox fx:id="statisticType" layoutX="284.0" layoutY="130.0" prefHeight="25.0" prefWidth="281.0" />
             <Label layoutX="194.0" layoutY="214.0" styleClass="main-label" text="Thống kê số lượng tiêu thụ nhu yếu phẩm" />
@@ -28,9 +28,9 @@
             <Label layoutX="50.0" layoutY="272.0" styleClass="sub-label" text="Theo ngày: " />
             <Label layoutX="430.0" layoutY="272.0" styleClass="sub-label" text="Theo tháng:" />
             <DatePicker fx:id="monthInput" layoutX="540.0" layoutY="272.0" />
-            <Button fx:id="dateButton" layoutX="194.0" layoutY="317.0" mnemonicParsing="false" onAction="#handleButton" text="Xác nhận" />
-            <Button fx:id="monthButton" layoutX="590.0" layoutY="317.0" mnemonicParsing="false" onAction="#handleButton" text="Xác nhận" />
-            <Button fx:id="allButton" layoutX="304.0" layoutY="745.0" mnemonicParsing="false" onAction="#handleButton" text="Thống kê theo mọi thời gian" />
+            <Button fx:id="dateButton" layoutX="194.0" layoutY="317.0" mnemonicParsing="false" text="Xác nhận" />
+            <Button fx:id="monthButton" layoutX="590.0" layoutY="317.0" mnemonicParsing="false" text="Xác nhận" />
+            <Button fx:id="allButton" layoutX="304.0" layoutY="745.0" mnemonicParsing="false" text="Thống kê theo mọi thời gian" />
          </children>
       </AnchorPane>
    </children>
