--- a/client/src/main/resources/com/seasidechachacha/client/view/ViewListTreatmentPlace.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/ViewListTreatmentPlace.fxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.Pagination?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.control.Pagination?>
 
 <VBox prefHeight="600.0" prefWidth="800.0" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.ViewListTreatmentPlaceController">
     <padding>
@@ -19,10 +18,13 @@
         <Label alignment="CENTER" maxWidth="1.7976931348623157E308" styleClass="main-label" text="Danh sách địa điểm điều trị/cách ly" textOverrun="CLIP">
         </Label>
         <HBox>
-            <Button fx:id="btnAdd" style="-fx-background-color: #0098f1;" text="Thêm mới địa điểm điều trị/cách ly" textFill="WHITE">
+            <Button fx:id="btnAdd" style="-fx-background-color: #0098f1;" textFill="WHITE">
                 <font>
                     <Font name="System Bold" size="13.0" />
                 </font>
+            <graphic>
+               <FontAwesomeIconView fill="WHITE" glyphName="PLUS" />
+            </graphic>
             </Button>    
         </HBox> 
         <Pagination fx:id="pagination">
